# Evolution-Simulator

./: .bumpversion.cfg  .gitignore  .travis.yaml  MANIFEST.in  README.md  RUN.bat.lnk  __main__.py  animals.py  app.py  auto_testing_config.ini  automatic_testing.py  automatic_testing_cfg.py  config.ini  config.py  config_automatic_testing.ini  config_ini.ini  config_mice_example.ini  config_mice_example.py  config_owls_and_mice_example.ini  config_owls_and_mice_example.py  config_parser.py  data_handler.py  dl_package.cmd  environment.py  graphics.py  open_activated_cmd.bat  preditorPrey.py  preditor_prey_revised.py  requirements.txt  results.csv  run_app.bat  setup.py  simulate.py  test.py  up.cmd  variables.py  variables_only_mice.py
Images/: mouse_resized.pgm
evolutionsimulator/: __main__.py  animals.py  automatic_testing.py  data_grouper.py  environment.py  interactive.py  interactive_graphics.py
example_configs/: only_mice.ini
resources/: welcome_text.html
results/: automatic_testing.csv  filtered.csv  grouped_results.csv
rust_src/: config.toml
rust_src/evolution_simulator/: Cargo.toml
rust_src/evolution_simulator/src/: animal.rs  board.rs  config.rs  controller.rs  lib.rs  main.rs  results.tsv  simulation.rs
src/: RUN.bat  animals.py  app.py  app.pyw  automatic_testing.py  data_analyzer.py  data_grouper.py  data_handler.py  environment.py  graphics.py  graphics_in_works.py  interactive.py  interactive_graphics.py  simulate.py
tests/: complex_case_1.ini  test_animals.py  test_config.ini  test_custom_cases.py  test_general.py  test_mouse.py
(+27 files in other folders)
