[package]
name = "evolution_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rand_chacha = "*"
chrono = "*"
clap = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"]}
toml = "*"

[lib]
name = "evolution_simulator"
path = "src/lib.rs"
